# amigo_ros2

./: .gitignore  .gitmodules  README.md
CAD/: README
Pan_Tilt/C/: main
Pan_Tilt/Python3/: Pan_Tilt_KeyBoard_Control  Quick_Keyboard_Check.py  main.py
Pan_Tilt_Control/Python3/: Pan_Tilt_Keyboard_Control
Sensor_Display/: README.md
Sensor_Display/Gas_Sensors/: 3_Gas.ino  readGasConcentration.ino
images/: setup.HEIC
isaac_ros-dev/: Base_poses.yaml  coas.pgm  coas.yaml  config_file.xml  first_poses.yaml  frames_2024-07-22_14.13.50.gv  frames_2024-07-22_14.18.08.gv  frames_2024-07-22_14.21.09.gv  frames_2024-07-23_14.19.59.gv  frames_2024-08-26_16.33.02.gv  frames_2025-01-10_12.46.33.gv  init_setup.bash  map_info.yaml  my_map.yaml  my_map_serialized.data  new_installs.txt  pose_log.json  setup.bash
isaac_ros-dev/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
isaac_ros-dev/install/cyclonedds/include/dds/: version.h
isaac_ros-dev/install/cyclonedds/include/idl/: endian.h  misc.h  version.h
isaac_ros-dev/install/cyclonedds/lib/: libcycloneddsidl.so.0  libcycloneddsidl.so.0.10.5
isaac_ros-dev/install/cyclonedds/lib/pkgconfig/: CycloneDDS.pc
isaac_ros-dev/install/cyclonedds/share/cyclonedds/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
isaac_ros-dev/install/go2_bringup/share/go2_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
isaac_ros-dev/install/go2_control/lib/go2_control/: base_to_base_tf  go2_driver  go2_state  odom_node  vslam_odom_node
isaac_ros-dev/install/go2_control/share/go2_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
isaac_ros-dev/install/go2_description/share/go2_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
isaac_ros-dev/install/go2_driver/lib/go2_driver/: go2_driver_node
isaac_ros-dev/install/go2_driver/share/go2_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
isaac_ros-dev/install/go2_interfaces/share/go2_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
isaac_ros-dev/install/isaac_ros_apriltag_interfaces/share/isaac_ros_apriltag_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
isaac_ros-dev/install/realsense2_camera/include/: base_realsense_node.h  constants.h  dynamic_params.h  image_publisher.h  named_filter.h  profile_manager.h  realsense_node_factory.h  ros_param_backend.h  ros_sensor.h  ros_utils.h  sensor_params.h  t265_realsense_node.h
isaac_ros-dev/install/rplidar_ros/include/: rplidar_node.hpp  visibility.h
isaac_ros-dev/install/unitree_ros2_example/: low_level_ctrl  read_low_state  read_motion_state  read_wireless_controller  sport_mode_ctrl
isaac_ros-dev/log/: latest_build  latest_list
isaac_ros-dev/src/gas_sensor_integration/: package.xml  setup.cfg  setup.py
isaac_ros-dev/src/gas_sensor_integration/gas_sensor_integration/: gas_sensors_to_sql.py
isaac_ros-dev/src/go2_bringup/: CMakeLists.txt
isaac_ros-dev/src/go2_bringup/launch/: go2_deploy.launch.py  go2_deploy.py  go2_deploy2.launch.py  go2_navigation.launch.py  go2_navigation_nvblox.launch.py  mapping.launch.py
isaac_ros-dev/src/go2_control/: package.xml  setup.cfg  setup.py  tree.txt
isaac_ros-dev/src/go2_control/go2_control/: base_to_base_tf.py  frontier_explorer.py  go2_lidar.py  go2_state.py  go2_velocity_commands.py  initial_pose_set.py  log_pose_action_client.py  log_pose_action_server.py  map_localizer_client.py  occupancy_grid_to_image.py  odom_node.py  region_map_client_node.py  region_map_service_node.py  reset_odom_service.py  search_action_server.py  spin_robot.py  task_nav_path_test.py  task_nav_test.py  task_nav_to_pose_test.py  vslam_odom_node.py
isaac_ros-dev/src/go2_control/unitree_api/msg/: Request.msg
isaac_ros-dev/src/go2_description/: CMakeLists.txt  package.xml
isaac_ros-dev/src/go2_description/config/: ekf.yaml  ekf_global.yaml  go2_urdf_config.rviz  mapper_params_online_async.yaml  nav2_frontier_explorer.yaml  nav2_mppi_controller.yaml  nav2_nvblox_params.yaml  nav2_params.yaml  nav_config.rviz  nav_nvblox_config.rviz
isaac_ros-dev/src/go2_description/launch/: display.launch.py  display.launch.xml
isaac_ros-dev/src/go2_description/maps/: Base.yaml  first.yaml  first_floor.yaml  first_floor_coas.pgm  first_floor_coas.yaml  lab.pgm  lab.yaml  lab_old.pgm  lab_old_old.pgm  lab_partitioned.yaml  test.yaml  test_room.yaml
isaac_ros-dev/src/go2_description/meshes/: base.stl
isaac_ros-dev/src/go2_description/urdf/: go2_description.urdf  go2_nav2.urdf  go2_nav2_nvblox.urdf
isaac_ros-dev/src/go2_driver/: CMakeLists.txt  package.xml
isaac_ros-dev/src/go2_driver/src/: go2_driver_node.cpp
isaac_ros-dev/src/go2_interfaces/: CMakeLists.txt  package.xml
isaac_ros-dev/src/go2_interfaces/action/: LogPose.action  Search.action
isaac_ros-dev/src/go2_interfaces/srv/: RegionMap.srv
isaac_ros-dev/src/go2_sdk_integration/src/: go2_motion_switcher_service.cpp
isaac_ros-dev/src/isaac_ros_common/docker/: Dockerfile.mine
isaac_ros-dev/src/isaac_ros_common/scripts/: .isaac_ros_common-config  run_dev.sh
isaac_ros-dev/src/pan_tilt_integration/: package.xml  setup.cfg  setup.py
isaac_ros-dev/src/pan_tilt_integration/pan_tilt_integration/: DRV8825.py  pan_tilt_controller.py  pan_tilt_controller_service.py
isaac_ros-dev/src/rplidar_ros2/launch/: rplidar.launch.py
isaac_ros-dev/src/unitree_ros2/: setup.sh  setup_local.sh
lse_go2_ws/log/: latest_list
lse_go2_ws/src/rl_control/: package.xml  setup.cfg  setup.py
lse_go2_ws/src/unitree_ros2/: README.md  setup.sh
(+3069 files in other folders)
