<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gas_sensor_integration</name>
  <version>0.0.0</version>
  <description>Integration of AMIGO gas sensors</description>
  <maintainer email="gabearod2@gmail.com">Gabriel Rodriguez</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>

  <exec_depend>python3-smbus2</depend>
  <exec_depend>python3-mariadb</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
