<?xml version="1.0"?>
<package format="3">
  <name>go2_interfaces</name>
  <version>0.0.0</version>
  <description>Custom interface definitions for go2 system</description>
  <maintainer email="jcass358@gmail.com">brimo</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build-time dependencies for interface generation -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Dependencies your .msg / .srv / .action rely on -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <!-- For runtime use of generated interfaces -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <!-- Interface packages typically belong to this group -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
